# SuperPoint

./: README.md  pyproject.toml  setup.cfg
scripts/JavadTracker/: JavadRegistration.py  Javadutils.py  main.py
scripts/SuperPoint/: main.py  parameter_sweep.py  stabilizing_analysis.py  superpoint.py  test_reg_ver.py  test_superpoint.py
scripts/SuperPoint/SuperGlue/: SuperGlue.py  SuperPoint.py  SuperPointGlu2.py  SuperPointGlue.py
scripts/SuperPoint/SuperPointGPU/: model.py  tensorrt_Cpp.py  test_torchrt.py
scripts/SuperPoint/eval_cpp/: utils.py
scripts/SuperPoint/train/: config.py  dataset.py  eval_models.py  loss.py  main.py  model.py  model_jit.py  preprocess_fundus.py  (+3 more)
scripts/TomokoTracker/: main.py
scripts/classical_landmark/: __init__.py  main.py
scripts/homography_bruteforce/: dataset.py  loss.py  main.py  model.py
scripts/reg_discriminator/: config.py  dataset.py  main.py  model.py  train.py
scripts/registration_svo/: config.py  dataset.py  registration.py  tracking_eval.py
scripts/registration_verification/: phase_correlation.py
scripts/robustness_eval/: dataset.py  registration_eval.py  synthetic_blur.py
src/mlregistration/: __init__.py  demons.py  reg_ver.py  superpoint.py  tps.py  utils.py
tests/integration_test/: __init__.py  demons_integration_test.py  postprocess_tps_integration_test.py  tps_integration_test.py
tests/regression_test/: regression.py
tests/test_support/: logger.py  read_hdf5_homography.py  slo_extract.py  utils.py
tests/unit_test/: demons_test.py  test_superpoint.py  test_version.py  vein_test.py
